--- a/rpiStatsApp/src/Makefile
+++ b/rpiStatsApp/src/Makefile
@@ -8,31 +8,31 @@ include $(TOP)/configure/CONFIG
 #=============================
 # Build the IOC application
 
-PROD_IOC = RPiStatus
-# RPiStatus.dbd will be created and installed
-DBD += RPiStatus.dbd
+PROD_IOC = rpiStats
+# rpiStats.dbd will be created and installed
+DBD += rpiStats.dbd
 
-# RPiStatus.dbd will be made up from these files:
-RPiStatus_DBD += base.dbd
+# rpiStats.dbd will be made up from these files:
+rpiStats_DBD += base.dbd
 
 # Include dbd files from all support applications:
-#RPiStatus_DBD += xxx.dbd
+#rpiStats_DBD += xxx.dbd
 
 # Add all the support libraries needed by this IOC
-#RPiStatus_LIBS += xxx
+#rpiStats_LIBS += xxx
 
-# RPiStatus_registerRecordDeviceDriver.cpp derives from RPiStatus.dbd
-RPiStatus_SRCS += RPiStatus_registerRecordDeviceDriver.cpp
+# rpiStats_registerRecordDeviceDriver.cpp derives from rpiStats.dbd
+rpiStats_SRCS += rpiStats_registerRecordDeviceDriver.cpp
 
 # Build the main IOC entry point on workstation OSs.
-RPiStatus_SRCS_DEFAULT += RPiStatusMain.cpp
-RPiStatus_SRCS_vxWorks += -nil-
+rpiStats_SRCS_DEFAULT += rpiStatsMain.cpp
+rpiStats_SRCS_vxWorks += -nil-
 
 # Add support from base/src/vxWorks if needed
-#RPiStatus_OBJS_vxWorks += $(EPICS_BASE_BIN)/vxComLibrary
+#rpiStats_OBJS_vxWorks += $(EPICS_BASE_BIN)/vxComLibrary
 
 # Finally link to the EPICS Base libraries
-RPiStatus_LIBS += $(EPICS_BASE_IOC_LIBS)
+rpiStats_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 #===========================
 
